--- a/plan/index.html
+++ b/plan/index.html
@@ -36,6 +36,10 @@
 			мая 2015</B></U></I></FONT></P>
 			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
 			<FONT FACE="Courier New, monospace">Сабдэй в этот день будет.</FONT></P>
+			
+			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
+			<FONT FACE="Courier New, monospace">Выпавшие игры: dark souls 2, neverhood, mass effect 1, europa universalis 4, sims, black mesa, risen.</FONT></P>
+			
 			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>19
 			мая 2015</B></U></I></FONT></P>
 			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
