--- a/plan/index.html
+++ b/plan/index.html
@@ -8,6 +8,19 @@
 	<META NAME="CHANGED" CONTENT="20150519;18342640">
 </HEAD>
 <BODY LANG="ru-RU" DIR="LTR">
+<style type="text/css">
+.forimage {
+  border: 4px solid #456;
+  background: #fff;
+  position: fixed;
+  right: 0%;
+  top: 200px;
+  width: calc(100% - 1100px);
+}
+</style>
+
+<img class="forimage" src="http://i.imgur.com/mPXJah1.jpg"></img>
+
 <P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Всем
 привет. Далее будет идти информация о том, что планируется на
 стримах. Информация будет обновляться каждый день перед самим
@@ -23,10 +36,10 @@
 постоянно обновляется!</FONT></FONT></P>
 <P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Возможны
 ночные и прочие внезапные стримы.</FONT></FONT></P>
-<TABLE WIDTH=1267 BORDER=1 CELLPADDING=4 CELLSPACING=3 STYLE="page-break-before: always; page-break-inside: avoid">
-	<COL WIDTH=1251>
+<TABLE WIDTH=1080 BORDER=1 CELLPADDING=4 CELLSPACING=3 STYLE="page-break-before: always; page-break-inside: avoid">
+	<COL WIDTH=1076>
 	<TR>
-		<TD WIDTH=1251 VALIGN=TOP>
+		<TD WIDTH=1076 VALIGN=TOP>
 			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>21
 			мая 2015</B></U></I></FONT></P>
 			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
