--- a/plan/index.html
+++ b/plan/index.html
@@ -14,13 +14,14 @@
   background: #fff;
   position: fixed;
   right: 0%;
-  top: 200px;
-  width: calc(100% - 1100px);
+  width: calc(100% - 1180px);
+  height: calc(100%-50px)
 }
 </style>
-
-<img class="forimage" src="http://i.imgur.com/mPXJah1.jpg"></img>
-
+<p class="forimage">
+<img style="width:100%" src="http://i.imgur.com/mPXJah1.jpg"></img>
+<img style="width:100%" src="http://i.imgur.com/rIvTTXU.jpg"></img>
+</p>
 <P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Всем
 привет. Далее будет идти информация о том, что планируется на
 стримах. Информация будет обновляться каждый день перед самим
