--- a/plan/index.html
+++ b/plan/index.html
@@ -14,33 +14,56 @@
   background: #fff;
   position: fixed;
   right: 0%;
-  width: calc(100% - 1180px);
+  margin-right: 30px;
+  width: calc(100% - 880px);
   height: calc(100%-50px)
 }
 </style>
-<p class="forimage">
-<img style="width:100%" src="http://i.imgur.com/mPXJah1.jpg"></img>
-<img style="width:100%" src="http://i.imgur.com/rIvTTXU.jpg"></img>
+<table class="forimage"><tr><td>
+<p align="center">
+<font size=12>
+Предвыборный блок Григория Сковороды!
+<br>
+</font>
+<img style="width:60%" src="http://i.imgur.com/mPXJah1.jpg"></img>
 </p>
-<P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Всем
+<table><tr>
+<td width="33%">
+<img style="width:100%" src="http://i.imgur.com/rIvTTXU.jpg"></img>
+<p align="center"><b>Noonedeadpunk</b><br>	Люди важнее прибыли. За социалистическую модерацию!</p>
+</td>
+<td width="33%">
+<img style="width:100%" src="http://i.imgur.com/YbsoKST.jpg?1"></img>
+<p align="center"><b>BudenkovDenis</b><br>	Выпьем за чат и справедливость! Самый быстрый модер! </p>
+</td>
+<td width="33%">
+<img style="width:100%" src="http://i.imgur.com/tmZz667.jpg"></img>
+<p align="center"><b>OduvanKenobi</b><br>И всё будет в порядке</p>
+</td>
+</tr></table>
+
+
+</td></tr></table>
+
+<P style="width:800"><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Всем
 привет. Далее будет идти информация о том, что планируется на
 стримах. Информация будет обновляться каждый день перед самим
 стримом.</FONT></FONT></P>
-<P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Это
+<P style="width:800"><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Это
 не значит, что в стриме будет обязательно то, что я запланировал.
 Планы иногда меняются на ходу, бывают и внешние причины. </FONT></FONT>
 </P>
-<P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Пожалуйста,
+<P style="width:800"><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Пожалуйста,
 прежде чем спамить в чат: &laquo;а че сегодня будет??&raquo; &laquo;а
 че, сегодня только *<I>название игры</I>*?&raquo; прочтите инфу ниже.</FONT></FONT></P>
-<P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Страница
+<P style="width:800"><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Страница
 постоянно обновляется!</FONT></FONT></P>
-<P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Возможны
+<P style="width:800"><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Возможны
 ночные и прочие внезапные стримы.</FONT></FONT></P>
-<TABLE WIDTH=1080 BORDER=1 CELLPADDING=4 CELLSPACING=3 STYLE="page-break-before: always; page-break-inside: avoid">
-	<COL WIDTH=1076>
+<TABLE WIDTH=800 BORDER=1 CELLPADDING=4 CELLSPACING=3 STYLE="page-break-before: always; page-break-inside: avoid">
+	<COL WIDTH=800>
 	<TR>
-		<TD WIDTH=1076 VALIGN=TOP>
+		<TD WIDTH=800 VALIGN=TOP>
 			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>21
 			мая 2015</B></U></I></FONT></P>
 			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
