--- a/plan/index.html
+++ b/plan/index.html
@@ -42,11 +42,17 @@
 	<COL WIDTH=1076>
 	<TR>
 		<TD WIDTH=1076 VALIGN=TOP>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>21
+			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>22
 			мая 2015</B></U></I></FONT></P>
 			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
 			<FONT FACE="Courier New, monospace">Начнем полное прохождение ласт
 			оф ас.</FONT></P>
+			
+			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>21
+			мая 2015</B></U></I></FONT></P>
+			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
+			<FONT FACE="Courier New, monospace">Возможен вечерний стрим по фаллауту, плавно перетекающий в ночной.</FONT></P>
+			
 			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>20
 			мая 2015</B></U></I></FONT></P>
 			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
