--- a/plan/index.html
+++ b/plan/index.html
@@ -8,21 +8,15 @@
 	<META NAME="CHANGED" CONTENT="20150519;18342640">
 </HEAD>
 <BODY LANG="ru-RU" DIR="LTR">
-<style type="text/css">
-.forimage {
-  border: 4px solid #456;
-  background: #fff;
-  position: fixed;
-  right: 0%;
-  width: calc(100% - 1180px);
-  height: calc(100%-50px)
+<style>
+html {
+width: 100%;
+height: 100%;
+clip: auto;
+position: absolute;
+overflow: hidden;
 }
 </style>
-<p class="forimage">
-<img style="width:100%" src="http://i.imgur.com/mPXJah1.jpg"></img>
-<img style="width:49%" src="http://cs623417.vk.me/v623417188/308a1/LwHTiq9dTUI.jpg"></img>
-<img style="width:49%" src="http://i.imgur.com/rIvTTXU.jpg"></img>
-</p>
 <P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Всем
 привет. Далее будет идти информация о том, что планируется на
 стримах. Информация будет обновляться каждый день перед самим
@@ -38,128 +32,8 @@
 постоянно обновляется!</FONT></FONT></P>
 <P><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 11pt">Возможны
 ночные и прочие внезапные стримы.</FONT></FONT></P>
-<TABLE WIDTH=1080 BORDER=1 CELLPADDING=4 CELLSPACING=3 STYLE="page-break-before: always; page-break-inside: avoid">
-	<COL WIDTH=1076>
-	<TR>
-		<TD WIDTH=1076 VALIGN=TOP>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>22
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Начнем полное прохождение ласт
-			оф ас.</FONT></P>
-			
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>21
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Возможен вечерний стрим по фаллауту, плавно перетекающий в ночной.</FONT></P>
-			
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>20
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Сабдэй в этот день будет.</FONT></P>
-			
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Выпавшие игры: dark souls 2, neverhood, mass effect 1, europa universalis 4, sims, black mesa, risen.</FONT></P>
-			
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>19
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Надо бы сабдэй провести, но
-			вышел унылый кусок говна под названием ведьмак 3, и придется ради
-			привлечения внимания играть в этот высер (который мне совершенно
-			похеру). </FONT>
-			</P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>18
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Валялся с похмелья охуевая.</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>17
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Стрима не будет. Либо поеду на
-			стенд-ап Кузьмы, либо смотреть финал чм по хоккею (если наши
-			пройдут).</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>16
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Пробую еще раз, если снова
-			разрыв &mdash; значит судьба такая. Если все ок, то таки добью
-			мафию и проведу все обещанные рандомы.</FONT></P>
-			<P LANG="en-US" STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Upd. <SPAN LANG="ru-RU">Мафия
-			добита, фаллаут чаллендж бездарно сфейлен, начал фоллач 3 для
-			ночных. Все записи на ютубе (канал </SPAN>madgostream)</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>15
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Либо дудос, либо провайдер, но
-			стрим сорвали.</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>14
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Выходной, еду зырить мэд макса
-			в аймакс. <SPAN LANG="ru-RU">НО!!! Скорее всего как вернусь (2
-			часа ночи) заведу ночной фоллач.</SPAN></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>13
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Добиваем мафию. НАЧИНАЕМ в 17.
-			НАДО УСПЕТЬ ДО 21-45 пройти все, что осталось! В 21-45 я уйду
-			смотреть футбол. А после него ночной фоллач.</FONT></P>
-			<P LANG="en-US" STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">UPD.</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Мафию не добили, осталось две
-			миссии. Вод: youtu.be/X-upalyInGM</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm; font-style: normal; font-weight: normal; text-decoration: none">
-			<FONT FACE="Courier New, monospace">Ночной <SPAN LANG="en-US">fallout
-			challenge: </SPAN>починил реактор, спас смайли, убил мецгера,
-			намутил тачку, доехал до брокен хиллс. Увы, потеряли одного из
-			членов группы: сулик сдох в перестрелке с мецгером. Воды:
-			youtube.com/watch?v=r1q50D026Hc youtube.com/watch?v=FYY7pB6sh3Q</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>12
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">Увы,
-			меня не будет. Если только совсем поздно запущу ночной стрим с
-			продолжением фоллача, но шансов очень мало, так как еду в город по
-			делам и скорее всего вернусь уставшим/злым.</FONT></P>
-			<P LANG="en-US" STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">Upd.
-			<SPAN LANG="ru-RU">Так и получилось, стрима не было.</SPAN></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace"><I><U><B>11
-			мая 2015</B></U></I></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">1.
-			Надо добить 10кк чаллендж в гта5. Короче, в игре есть ачивка: если
-			пройти все 5 онлайн ограблений, то дается 10 лямов зелени
-			(игровой). Но! Пройти надо одним составом, на хард сложности и БЕЗ
-			ЕДИНОЙ СМЕРТИ. Мы прошли уже 4 ограбления (подряд, ни разу не
-			умерев), осталось последнее, пятое. Состав: я, кекс, мобстер,
-			фокер. </FONT>
-			</P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">2.
-			После чалленджа с гта я хочу замутить чаллендж по фаллауту (вторая
-			часть). Буду играть во вторую часть до первой смерти без сейвов
-			(сохраняться буду, конечно, так как игра часто вылетает). Смерть
-			героя = конец сейва. Как в реальной жизни. Кто любит веселые игры
-			&mdash; не приходите, я буду потеть и много залипать в игру. </FONT>
-			</P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">3.
-			<B>ВАЖНО!!!</B> Весь вечер (вообще примерно до среды-четверга)
-			будет идти голосование за сабдэй (в честь 85к фолловеров).
-			Предложите свою игру &ndash; для этого в чат твитча надо написать
-			%<I>названиеигры</I>. Все &mdash; она добавлена в голосование.
-			Потом рандом выберет 5 игр из списка. Выбравший лучшую игру по
-			итогам сабдэя (который пройдет в конце недели) получит приз.
-			Хорошо подумайте, какую игру хотите выбрать, как она будет
-			смотреться и играться на стриме!</FONT></P>
-			<P LANG="en-US" STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">Upd.</FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">Стрим
-			закончен. <SPAN LANG="en-US">Vods:</SPAN></FONT></P>
-			<P STYLE="margin-bottom: 0.5cm"><FONT FACE="Courier New, monospace">1.
-			Ограбления: youtu.be/fzWicmUxzH8 youtu.be/B9lwAg1BwJg</FONT></P>
-			<P><FONT FACE="Courier New, monospace">2. Фоллач:
-			youtu.be/_KVf4y3R7ZE youtu.be/h9X8i67LiRE</FONT></P>
-		</TD>
-	</TR>
+<iframe width=1000 style="height:calc( 100vh - 150px )" src="https://docs.google.com/spreadsheets/d/1vo4nIzmo63Ito-ZE5vuhMOP1f7tJm0R-Lyp5Gna74mI/pubhtml">
+</iframe>
 </TABLE>
 <P><BR><BR>
 </P>
