--- a/new/index.html
+++ b/new/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/1ZbPUFWL92JV43l2syP7jR8lTxm36wL5TqkmdiK19zlc/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Загрузка...</iframe>
+<iframe src="https://docs.google.com/forms/d/1ZbPUFWL92JV43l2syP7jR8lTxm36wL5TqkmdiK19zlc/viewform?embedded=true" style="width : 100% ; height : 100vh" frameborder="0" marginheight="0" marginwidth="0">Загрузка...</iframe>
