--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ overflow: hidden;
 </div>
 <div style="position: absolute; right: 5px;top:5px;width:500px">
 <iframe src="https://www.google.com/calendar/embed?title=%D0%A0%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5%20%D1%81%D1%82%D1%80%D0%B8%D0%BC%D0%BE%D0%B2&amp;height=600&amp;wkst=2&amp;hl=ru&amp;bgcolor=%23FFFFFF&amp;src=1on0005i9jckokk4aeoa3mbgt4%40group.calendar.google.com&amp;color=%23333333&amp;ctz=Europe%2FMoscow" style=" border-width:0 " width="500" height="400" frameborder="0" scrolling="no"></iframe>
-<iframe src="https://www.google.com/calendar/embed?title=%D0%A0%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5%20%D1%81%D1%82%D1%80%D0%B8%D0%BC%D0%BE%D0%B2&amp;height=600&amp;wkst=2&amp;hl=ru&amp;bgcolor=%23FFFFFF&amp;src=1on0005i9jckokk4aeoa3mbgt4%40group.calendar.google.com&amp;color=%23333333&amp;ctz=Europe%2FMoscow" style=" border-width:0 " width="500" height="400" frameborder="0" scrolling="no"></iframe></iframe>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<a class="twitter-timeline" href="https://twitter.com/madgostream" data-widget-id="603616011208794112">Твиты от @madgostream</a>
 </div>
 
 </BODY>
