--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <BODY LANG="ru-RU" DIR="LTR">
 <style>
 html {
-width: 100%;
+margin: 0 auto;
+width: 1280;
 height: 100%;
 clip: auto;
-position: absolute;
-overflow: hidden;
+position: relative;
+overflow-y: hidden;
 }
 </style>
 <div style="width:calc(100% - 510px);">
