--- a/index.html
+++ b/index.html
@@ -383,5 +383,4 @@ function cplottopickwinner() {
 <br>
 <br>
 <br>
-<iframe src="./Random voting twitch.tv_etozhemad! 31082015_1313_files/chat.html" style="width:420px; height:95%; position:fixed;">
-</iframe></body></html>
+</body></html>
