--- a/znd/index.html
+++ b/znd/index.html
@@ -69,7 +69,7 @@ function cplottopickwinner() {
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
 <tr id=""><td></td><td>Borderlands2</td></tr>
-<tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
+<tr id="etozhebot"><td>etozhebot</td><td>WTF</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
