--- a/znd/index.html
+++ b/znd/index.html
@@ -68,12 +68,10 @@ function cplottopickwinner() {
     <table id = "latestData" style="width:calc(100% - 450px)">
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
-<tr id=""><td></td><td>Borderlands2</td></tr>
-<tr id="etozhebot"><td>etozhebot</td><td>WTF</td></tr>
+<tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
-<tr id="Large_Serum"><td>Large_Serum</td><td>State of Decay</td></tr>
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
 <tr id="Dontgiveadamnabouttime"><td>Dontgiveadamnabouttime</td><td>Spore</td></tr>
 <tr id="Sectorochek"><td>Sectorochek</td><td></td></tr>
