--- a/znd/index.html
+++ b/znd/index.html
@@ -83,6 +83,7 @@ function cplottopickwinner() {
 <tr id="HeardScientist"><td>HeardScientist</td><td> to the moon</td></tr>
 <tr id="Jerusalem1488_ru"><td>Jerusalem1488_ru</td><td> The punisher</td></tr>
 <tr id="Kerrigon"><td>Kerrigon</td><td>старкафт</td></tr>
+<tr id="Qlkmr"><td>Qlkmr</td><td> Prince of Persia: Warrior Within</td></tr>
     </table>
 
 
