--- a/znd/index.html
+++ b/znd/index.html
@@ -77,7 +77,7 @@ function cplottopickwinner() {
 <tr id="Sectorochek"><td>Sectorochek</td><td></td></tr>
 <tr id="MrSnowen"><td>MrSnowen</td><td>Skyrim</td></tr>
 <tr id="OgyReZ"><td>OgyReZ</td><td>the room</td></tr>
-<tr id="Starosta3000"><td>Starosta3000</td><td>fallout 3</td></tr>
+<tr id="Starosta3000"><td>Starosta3000</td><td>Fallout3</td></tr>
 <tr id="PavelDatsyukSib"><td>PavelDatsyukSib</td><td>Layers of fear</td></tr>
 <tr id="etozhezanuda"><td>etozhezanuda</td><td>sims 1</td></tr>
 <tr id="HeardScientist"><td>HeardScientist</td><td> to the moon</td></tr>
