--- a/znd/index.html
+++ b/znd/index.html
@@ -68,7 +68,7 @@ function cplottopickwinner() {
     <table id = "latestData" style="width:calc(100% - 450px)">
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
-<tr id="etozhebot"><td>etozhebot</td><td>testing</td></tr>
+<tr id="etozhebot"><td>etozhebot</td><td>Drunken Robot Pornography</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
