--- a/znd/index.html
+++ b/znd/index.html
@@ -68,6 +68,7 @@ function cplottopickwinner() {
     <table id = "latestData" style="width:calc(100% - 450px)">
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
+<tr id="Nimferna"><td>Nimferna</td><td>Syberia</td></tr>
 <tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
