--- a/znd/index.html
+++ b/znd/index.html
@@ -74,6 +74,7 @@ function cplottopickwinner() {
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
+<tr id="Large_Serum"><td>Large_Serum</td><td>State of Decay</td></tr>
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
 <tr id="Dontgiveadamnabouttime"><td>Dontgiveadamnabouttime</td><td>Spore</td></tr>
 <tr id="Sectorochek"><td>Sectorochek</td><td></td></tr>
