--- a/znd/index.html
+++ b/znd/index.html
@@ -10,7 +10,7 @@
    width : 50%;
    }
    table {
-    width: 100%; /* Ўирина таблицы */
+    width: 100%; 
     border-collapse: collapse; /* ”бираем двойные линии между €чейками */
    }
    td, th {
