--- a/znd/index.html
+++ b/znd/index.html
@@ -10,7 +10,7 @@
    width : 50%;
    }
    table {
-    width: 100%; 
+    width: 100%; /* Ширина таблицы */
     border-collapse: collapse; /* Убираем двойные линии между ячейками */
    }
    td, th {
@@ -68,7 +68,6 @@ function cplottopickwinner() {
     <table id = "latestData" style="width:calc(100% - 450px)">
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
-<tr id=""><td></td><td>Borderlands</td></tr>
 <tr id="Nimferna"><td>Nimferna</td><td>Syberia</td></tr>
 <tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
@@ -77,12 +76,11 @@ function cplottopickwinner() {
 <tr id="Large_Serum"><td>Large_Serum</td><td>State of Decay</td></tr>
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
 <tr id="Dontgiveadamnabouttime"><td>Dontgiveadamnabouttime</td><td>Spore</td></tr>
-<tr id="Sectorochek"><td>Sectorochek</td><td></td></tr>
 <tr id="MrSnowen"><td>MrSnowen</td><td>Skyrim</td></tr>
 <tr id="OgyReZ"><td>OgyReZ</td><td>the room</td></tr>
 <tr id="Starosta3000"><td>Starosta3000</td><td>Fallout3</td></tr>
 <tr id="PavelDatsyukSib"><td>PavelDatsyukSib</td><td>Layers of fear</td></tr>
-<tr id="etozhezanuda"><td>etozhezanuda</td><td>sims 1</td></tr>
+<tr id="etozhezanuda"><td>etozhezanuda</td><td>Sims1</td></tr>
 <tr id="HeardScientist"><td>HeardScientist</td><td> to the moon</td></tr>
 <tr id="Jerusalem1488_ru"><td>Jerusalem1488_ru</td><td> The punisher</td></tr>
 <tr id="Kerrigon"><td>Kerrigon</td><td>СЃС‚Р°СЂРєР°С„С‚</td></tr>
