--- a/znd/index.html
+++ b/znd/index.html
@@ -74,6 +74,7 @@ function cplottopickwinner() {
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
 <tr id="Grigory_Skovoroda"><td>Grigory_Skovoroda</td><td>football manager 2015</td></tr>
+<tr id="Madgeeks"><td>Madgeeks</td><td>Rampage Knights</td></tr>
 <tr id="Large_Serum"><td>Large_Serum</td><td>State of Decay</td></tr>
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
 <tr id="Dontgiveadamnabouttime"><td>Dontgiveadamnabouttime</td><td>Spore</td></tr>
