--- a/znd/index.html
+++ b/znd/index.html
@@ -79,7 +79,7 @@ function cplottopickwinner() {
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
 <tr id="Dontgiveadamnabouttime"><td>Dontgiveadamnabouttime</td><td>Spore</td></tr>
 <tr id="MrSnowen"><td>MrSnowen</td><td>Skyrim</td></tr>
-<tr id="OgyReZ"><td>OgyReZ</td><td>the room</td></tr>
+<tr id="OgyReZ"><td>OgyReZ</td><td> Boson X</td></tr>
 <tr id="oduvankenobi"><td>oduvankenobi</td><td>skyrim</td></tr>
 <tr id="Starosta3000"><td>Starosta3000</td><td>Fallout3</td></tr>
 <tr id="PavelDatsyukSib"><td>PavelDatsyukSib</td><td>Layers of fear</td></tr>
