--- a/znd/index.html
+++ b/znd/index.html
@@ -69,6 +69,7 @@ function cplottopickwinner() {
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
 <tr id="Nimferna"><td>Nimferna</td><td>Syberia</td></tr>
+<tr id="Ktab_Starlord"><td>Ktab_Starlord</td><td>The fall</td></tr>
 <tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
