--- a/znd/index.html
+++ b/znd/index.html
@@ -82,7 +82,7 @@ function cplottopickwinner() {
 <tr id="MrSnowen"><td>MrSnowen</td><td>Skyrim</td></tr>
 <tr id="OgyReZ"><td>OgyReZ</td><td> Boson X</td></tr>
 <tr id="oduvankenobi"><td>oduvankenobi</td><td>skyrim</td></tr>
-<tr id="Starosta3000"><td>Starosta3000</td><td>Fallout3</td></tr>
+<tr id="Starosta3000"><td>Starosta3000</td><td>Skyrim</td></tr>
 <tr id="PavelDatsyukSib"><td>PavelDatsyukSib</td><td>Layers of fear</td></tr>
 <tr id="etozhezanuda"><td>etozhezanuda</td><td>Sims1</td></tr>
 <tr id="HeardScientist"><td>HeardScientist</td><td>to the moon</td></tr>
