--- a/znd/index.html
+++ b/znd/index.html
@@ -68,6 +68,7 @@ function cplottopickwinner() {
     <table id = "latestData" style="width:calc(100% - 450px)">
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
+<tr id="2Madeira"><td>2Madeira</td><td>ZOMBI</td></tr>
 <tr id="Nimferna"><td>Nimferna</td><td>Syberia</td></tr>
 <tr id="Ktab_Starlord"><td>Ktab_Starlord</td><td>The fall</td></tr>
 <tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
