--- a/znd/index.html
+++ b/znd/index.html
@@ -68,29 +68,30 @@ function cplottopickwinner() {
     <table id = "latestData" style="width:calc(100% - 450px)">
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
-<tr id="2Madeira"><td>2Madeira</td><td>ZOMBI</td></tr>
 <tr id="Nimferna"><td>Nimferna</td><td>Syberia</td></tr>
 <tr id="Ktab_Starlord"><td>Ktab_Starlord</td><td>The fall</td></tr>
-<tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
-<tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
 <tr id="Grigory_Skovoroda"><td>Grigory_Skovoroda</td><td>football manager 2015</td></tr>
 <tr id="Madgeeks"><td>Madgeeks</td><td>Rampage Knights</td></tr>
 <tr id="Large_Serum"><td>Large_Serum</td><td>State of Decay</td></tr>
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
 <tr id="Dontgiveadamnabouttime"><td>Dontgiveadamnabouttime</td><td>Spore</td></tr>
-<tr id="MrSnowen"><td>MrSnowen</td><td>Skyrim</td></tr>
-<tr id="OgyReZ"><td>OgyReZ</td><td> Boson X</td></tr>
 <tr id="oduvankenobi"><td>oduvankenobi</td><td>skyrim</td></tr>
 <tr id="Starosta3000"><td>Starosta3000</td><td>Skyrim</td></tr>
 <tr id="PavelDatsyukSib"><td>PavelDatsyukSib</td><td>Layers of fear</td></tr>
-<tr id="etozhezanuda"><td>etozhezanuda</td><td>Sims1</td></tr>
 <tr id="HeardScientist"><td>HeardScientist</td><td>to the moon</td></tr>
 <tr id="Jerusalem1488_ru"><td>Jerusalem1488_ru</td><td> The punisher</td></tr>
-<tr id="Kerrigon"><td>Kerrigon</td><td>старкафт</td></tr>
 <tr id="InvisibleAnomally"><td>InvisibleAnomally</td><td>Witcher 3</td></tr>
 <tr id="Qlkmr"><td>Qlkmr</td><td> Prince of Persia: Warrior Within</td></tr>
+<tr id="2Madeira"><td>2Madeira</td><td>ZOMBI</td></tr>
+<tr id="etozhebot"><td>etozhebot</td><td>Girls Like Robots</td></tr>
+<tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
+<tr id="Johnny_Hoffmann"><td>Johnny_Hoffmann</td><td>Dark Souls: Prepare to Die Edition</td></tr>
+<tr id="MrSnowen"><td>MrSnowen</td><td>Skyrim</td></tr>
+<tr id="OgyReZ"><td>OgyReZ</td><td> Boson X</td></tr>
+<tr id="etozhezanuda"><td>etozhezanuda</td><td>Sims1</td></tr>
+<tr id="Kerrigon"><td>Kerrigon</td><td>старкафт</td></tr>
     </table>
 
 
