--- a/znd/index.html
+++ b/znd/index.html
@@ -68,9 +68,9 @@ function cplottopickwinner() {
     <table id = "latestData" style="width:calc(100% - 450px)">
 
 <tr id="hobh0bhob"><td>hobh0bhob</td><td>fallout3</td></tr>
-<tr id=""><td></td><td> Borderlands2</td></tr>
 <tr id="Nimferna"><td>Nimferna</td><td>Syberia</td></tr>
 <tr id="Ktab_Starlord"><td>Ktab_Starlord</td><td>The fall</td></tr>
+<tr id="Applejackl33t"><td>Applejackl33t</td><td>Borderlands2</td></tr>
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
 <tr id="Grigory_Skovoroda"><td>Grigory_Skovoroda</td><td>football manager 2015</td></tr>
@@ -90,7 +90,7 @@ function cplottopickwinner() {
 <tr id="MastterAr"><td>MastterAr</td><td>Dragon Age: Origins</td></tr>
 <tr id="Johnny_Hoffmann"><td>Johnny_Hoffmann</td><td>Dark Souls: Prepare to Die Edition</td></tr>
 <tr id="MrSnowen"><td>MrSnowen</td><td>Skyrim</td></tr>
-<tr id="OgyReZ"><td>OgyReZ</td><td> Boson X</td></tr>
+<tr id="OgyReZ"><td>OgyReZ</td><td>Boson X</td></tr>
 <tr id="etozhezanuda"><td>etozhezanuda</td><td>Sims1</td></tr>
 <tr id="Kerrigon"><td>Kerrigon</td><td>старкафт</td></tr>
     </table>
