--- a/znd/index.html
+++ b/znd/index.html
@@ -76,6 +76,7 @@ function cplottopickwinner() {
 <tr id="Grigory_Skovoroda"><td>Grigory_Skovoroda</td><td>football manager 2015</td></tr>
 <tr id="Madgeeks"><td>Madgeeks</td><td>Rampage Knights</td></tr>
 <tr id="Large_Serum"><td>Large_Serum</td><td>State of Decay</td></tr>
+<tr id="kapus7ka"><td>kapus7ka</td><td>HOTEL REMORSE</td></tr>
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
 <tr id="Dontgiveadamnabouttime"><td>Dontgiveadamnabouttime</td><td>Spore</td></tr>
 <tr id="oduvankenobi"><td>oduvankenobi</td><td>skyrim</td></tr>
