--- a/znd/index.html
+++ b/znd/index.html
@@ -74,7 +74,7 @@ function cplottopickwinner() {
 <tr id="Cool_Guy_Vlad"><td>Cool_Guy_Vlad</td><td>Silent Hill 3</td></tr>
 <tr id="Kimondi"><td>Kimondi</td><td>Garry Potter</td></tr>
 <tr id="Grigory_Skovoroda"><td>Grigory_Skovoroda</td><td>football manager 2015</td></tr>
-<tr id="Madgeeks"><td>Madgeeks</td><td>Rampage Knights</td></tr>
+<tr id="Madgeeks"><td>Madgeeks</td><td>Microsoft Flight Simulator X</td></tr>
 <tr id="Large_Serum"><td>Large_Serum</td><td>State of Decay</td></tr>
 <tr id="kapus7ka"><td>kapus7ka</td><td>HOTEL REMORSE</td></tr>
 <tr id="Alpencolt"><td>Alpencolt</td><td>PappersPlease</td></tr>
