--- a/znd/mus/index.html
+++ b/znd/mus/index.html
@@ -4,7 +4,7 @@
 <script>
 function update() {
 	console.log("WTF");
-	$("#latestData").load("content.html");
+	$("#latestData").load("content.html?"+Math.random());
     var t = setTimeout(update, 1000);
 }
 
