--- a/znd/mus/index.html
+++ b/znd/mus/index.html
@@ -20,7 +20,7 @@ function update() {
  </head>
  <body onload="window.setInterval(update,1000)">
 
-  <marquee behavior="alternate" direction="left" bgcolor="#ffcc00" id="latestData">
+  <marquee behavior="scroll" direction="left" bgcolor="#ffcc00" id="latestData">
   
   </marquee>
 
