--- a/znd/mus/index.html
+++ b/znd/mus/index.html
@@ -4,8 +4,7 @@
 <script>
 function update() {
 	console.log("WTF");
-	$("#latestData").load("content.html?"+Math.random());
-	$("#fake").load("content.html?"+Math.random());
+	$("#latestData").load("http://twitchy.ru/znd/mus/content.html?"+Math.random());
 }
 
 </script>
@@ -24,7 +23,6 @@ function update() {
   
   </marquee>
   
-  <p id="fake"></p>
 
  </body>
 </html>
