--- a/znd/mus/index.html
+++ b/znd/mus/index.html
@@ -4,7 +4,7 @@
 <script>
 function update() {
 	console.log("WTF");
-	$("#latestData").load("http://twitchy.ru/znd/mus/content.html?"+Math.random());
+	$("#latestData").load("http://twitchy.ru/znd/mus/content2.html?"+Math.random());
 }
 
 </script>
@@ -15,7 +15,7 @@ function update() {
  
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Тег MARQUEE</title>
+  <title>MUSIC</title>
  </head>
  <body onload="$.ajaxSetup({cache: false});window.setInterval(update,5000)">
 
