--- a/znd/snow.htm
+++ b/znd/snow.htm
@@ -11,7 +11,7 @@ snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
 </script>
 </head>
 
-<body style="background:#336699;font:100 1.75em helvetica neue, helvetica,arial,verdana,sans-serif;color:#fff">
+<body style="background:transparent;font:100 1.75em helvetica neue, helvetica,arial,verdana,sans-serif;color:#fff">
 
 </body>
 </html>
