--- a/znd/snow.htm
+++ b/znd/snow.htm
@@ -5,8 +5,8 @@
 <title>DHTML SnowStorm: Basic Example</title>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
-snowStorm.snowColor = '#000000'; // blue-ish snow!?
-snowStorm.flakesMaxActive = 96;  // show more snow on screen at once
+snowStorm.snowColor = '#dddddd'; // blue-ish snow!?
+snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
 </script>
 </head>
