--- a/znd/snowblue.htm
+++ b/znd/snowblue.htm
@@ -5,7 +5,7 @@
 <title>DHTML SnowStorm: Basic Example</title>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
-snowStorm.snowColor = '#fff'; // blue-ish snow!?
+snowStorm.snowColor = '#99ccff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
 </script>
