--- a/znd/snowalot.htm
+++ b/znd/snowalot.htm
@@ -5,9 +5,11 @@
 <title>DHTML SnowStorm: Basic Example</title>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
-snowStorm.snowColor = '#fff'; // blue-ish snow!?
-snowStorm.flakesMaxActive = 512;  // show more snow on screen at once
+snowStorm.snowColor = '#f00'; // blue-ish snow!?
+snowStorm.flakesMaxActive = 256;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
+snowStorm.flakeWidth = 20;            // Max pixel width reserved for snow element
+snowStorm.flakeHeight = 20;
 </script>
 </head>
 
