--- a/znd/snowalot.htm
+++ b/znd/snowalot.htm
@@ -10,7 +10,7 @@ snowStorm.flakesMaxActive = 256;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
 snowStorm.flakeWidth = 50;            // Max pixel width reserved for snow element
 snowStorm.flakeHeight = 50;
-snowStorm.snowCharacter = '*';
+snowStorm.snowCharacter = '&bull;';
 </script>
 </head>
 
