--- a/znd/snow.htm
+++ b/znd/snow.htm
@@ -8,6 +8,7 @@
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
+snowStorm.vMaxY = 1;
 </script>
 </head>
 
