--- a/znd/kappasnow.html
+++ b/znd/kappasnow.html
@@ -5,6 +5,7 @@
 <title>DHTML SnowStorm: Basic Example</title>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
+snowStorm.snowCharacter = "<img src="https://static-cdn.jtvnw.net/emoticons/v1/74510/3.0">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
