--- a/znd/kappasnow.html
+++ b/znd/kappasnow.html
@@ -5,7 +5,7 @@
 <title>DHTML SnowStorm: Basic Example</title>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
-snowStorm.snowCharacter = "<img src=&quot;kappa.png&quot;>";
+snowStorm.snowCharacter = "<img src=kappa.png>";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
