--- a/znd/kappasnow.html
+++ b/znd/kappasnow.html
@@ -10,6 +10,8 @@ snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
 snowStorm.vMaxX = 1;
+this.flakeWidth = 32;            // Max pixel width reserved for snow element
+this.flakeHeight = 32;
 </script>
 </head>
 
