--- a/znd/kappasnow.html
+++ b/znd/kappasnow.html
@@ -5,13 +5,13 @@
 <title>DHTML SnowStorm: Basic Example</title>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
-snowStorm.snowCharacter = "<img src=kappa.png style=\"max-width:100%;max-height:100%;\">";
+snowStorm.snowCharacter = "<img src=mrazish.png style=\"max-width:100%;max-height:100%;\">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
 snowStorm.vMaxX = 1;
-this.flakeWidth = 20;            // Max pixel width reserved for snow element
-this.flakeHeight = 20;
+this.flakeWidth = 64;            // Max pixel width reserved for snow element
+this.flakeHeight = 64;
 </script>
 </head>
 
