--- a/znd/kappasnow.html
+++ b/znd/kappasnow.html
@@ -12,7 +12,7 @@
 snowStorm.snowCharacter = "<img src=marzish.png style=\"max-width:100%;max-height:100%;\">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
-//snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
+snowStorm.useTwinkleEffect = false; // let the snow flicker in and out of view
 snowStorm.vMaxX = 1;
 this.flakeWidth = 64;            // Max pixel width reserved for snow element
 this.flakeHeight = 64;
