--- a/znd/smilesnow.html
+++ b/znd/smilesnow.html
@@ -9,7 +9,7 @@
 <head>
 <script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
-snowStorm.snowCharacter = "<img src=\"https://static-cdn.jtvnw.net/emoticons/v1/"+location.hash+"/3.0.png\" style=\"max-width:100%;max-height:100%;\">";
+snowStorm.snowCharacter = "<img src=\"https://static-cdn.jtvnw.net/emoticons/v1/"+location.hash.substring(1)+"/3.0.png\" style=\"max-width:100%;max-height:100%;\">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = false; // let the snow flicker in and out of view
