--- a/znd/smilesnow.html
+++ b/znd/smilesnow.html
@@ -13,7 +13,8 @@ snowStorm.snowCharacter = "<img src=\"https://static-cdn.jtvnw.net/emoticons/v1/
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = false; // let the snow flicker in and out of view
-snowStorm.vMaxX = 1;
+snowStorm.vMaxY = 1;
+snowStorm.vMaxX = 0.2;
 this.flakeWidth = 32;            // Max pixel width reserved for snow element
 this.flakeHeight = 32;
 </script>
