--- a/znd/smilesnow.html
+++ b/znd/smilesnow.html
@@ -7,7 +7,7 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" /><title>DHTML SnowStorm: Basic Example</title>
 <head>
-<script type="text/javascript" src="snowstorm.js"></script>
+<script type="text/javascript" src="snowstormrot.js"></script>
 <script type="text/javascript">
 snowStorm.snowCharacter = "<img src=\"https://static-cdn.jtvnw.net/emoticons/v1/"+location.hash.substring(1)+"/3.0\" style=\"max-width:100%;max-height:100%;\">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
