--- a/znd/smilesnow.html
+++ b/znd/smilesnow.html
@@ -20,7 +20,7 @@ this.flakeHeight = 32;
 </script>
 </head>
 
-<body style="background:transparent;font:100 1.75em helvetica neue, helvetica,arial,verdana,sans-serif;color:#fff">
+<body style="background:transparent;font:100 1.75em helvetica neue, helvetica,arial,verdana,sans-serif;color:#fff;overflow:hidden;">
 
 </body>
 </html>
