--- a/znd/madtraps.html
+++ b/znd/madtraps.html
@@ -9,7 +9,7 @@
 <head>
 <script type="text/javascript" src="snowstormrot.js"></script>
 <script type="text/javascript">
-snowStorm.snowCharacter = "<img src=\"blob:http://imgur.com/771ac6e4-065c-4f8b-a245-9ac090cc9fc1\" style=\"max-width:100%;max-height:100%;\">";
+snowStorm.snowCharacter = "<img src=\"http://i.imgur.com/aZtUyZi.gif" style=\"max-width:100%;max-height:100%;\">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 128;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = false; // let the snow flicker in and out of view
