--- a/znd/madtraps.html
+++ b/znd/madtraps.html
@@ -7,7 +7,7 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" /><title>DHTML SnowStorm: Basic Example</title>
 <head>
-<script type="text/javascript" src="snowstormrot.js"></script>
+<script type="text/javascript" src="snowstorm.js"></script>
 <script type="text/javascript">
 snowStorm.snowCharacter = "<img src=\"http://i.imgur.com/aZtUyZi.gif\" style=\"max-width:100%;max-height:100%;\">";
 snowStorm.snowColor = '#fff'; // blue-ish snow!?
