--- a/stats.htm
+++ b/stats.htm
@@ -9,7 +9,7 @@
 
    function drawGID() {
       var query = new google.visualization.Query(
-          'https://docs.google.com/spreadsheets/d/1csPBzPf5kIt5RdEi_BqKFRFyuWoCLku_RTa_2JuM9Ws/gviz/tq?range=Стримы!B7:C267');
+          'https://docs.google.com/spreadsheets/d/1csPBzPf5kIt5RdEi_BqKFRFyuWoCLku_RTa_2JuM9Ws/gviz/tq?range=Стримы!B7:B267');
 		
       query.send(handleQueryResponse);
     }
@@ -21,6 +21,9 @@
       }
 
       var data = response.getDataTable();
+	data.addColumn('number','value');
+	for(var i=0;i<data.getNumberOfRows();i++)
+		data.setValue(1,i,1);
       var chart = new google.visualization.Calendar(document.getElementById('chart_div'));
       chart.draw(data, { height: 400 });
     }
