--- a/stats.htm
+++ b/stats.htm
@@ -23,7 +23,7 @@
       var data = response.getDataTable();
 	data.addColumn('number','value');
 	for(var i=0;i<data.getNumberOfRows();i++)
-		data.setValue(1,i,1);
+		data.setValue(1,i,i);
       console.log(data.toJSON());
       var chart = new google.visualization.Calendar(document.getElementById('chart_div'));
       chart.draw(data, { height: 400 });
