--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@ function cplottopickwinner() {
 <b> Votes: </b>	
 	
 <table id="latestData" style="width:calc(100% - 450px)"><tbody><tr id="soldecroix"><td>soldecroix</td><td>Knights of the Round (на харде)</td></tr>
-<tr id="keydzhi"><td>kornishon29</td><td>rocket league</td></tr>
-<tr id="soawesome"><td>alex_gothryd</td><td>баал</td></tr>
-<tr id="redKnight"><td>bestcomment</td><td>Fable</td></tr>
-<tr id="AreUReady"><td>ejaculate_nostradamusa</td><td>Satellite Reign</td></tr>
-<tr id="инкогнито"><td>timarif</td><td>mafia 2</td></tr>
-<tr id="lostded"><td>izbranii</td><td>Singularity</td></tr>
-<tr id="Sir Maslenok"><td>ilolstuff</td><td>Mount &amp; Blade</td></tr>
-<tr id="Пол Гаскойн"><td>govnoed666</td><td>mafia2</td></tr>
-<tr id="TheDima243"><td>zoren_striker</td><td>South Park: The Stick of Truth</td></tr>
-<tr id="TakoePolo"><td>georgstin</td><td>Fable Anniversary</td></tr>
-<tr id="rikardo"><td>defilinni</td><td>TheWheelman</td></tr>
-<tr id="crocok"><td>hochurabotat</td><td>Long live the queen</td></tr>
-<tr id="ВянтарьОдет"><td>areylind</td><td>LegendOfGrimrock2</td></tr>
-<tr id="Igor"><td>altroverse</td><td>gay sex villa 3d</td></tr></tbody></table>
+<tr id="keydzhi"><td>keydzhi</td><td>keydzhi</td></tr>
+<tr id="soawesome"><td>soawesome</td><td>so_awesome_sonic</td></tr>
+<tr id="redKnight"><td>redKnight</td><td>jean_claude_van_helsing</td></tr>
+<tr id="AreUReady"><td>AreUReady</td><td>AreYouReady_88</td></tr>
+<tr id="инкогнито"><td>инкогнито</td><td>FluffyMuzzy</td></tr>
+<tr id="lostded"><td>lostded</td><td>MrPromenade</td></tr>
+<tr id="Sir Maslenok"><td>Sir Maslenok</td><td>lieutenantbulldog</td></tr>
+<tr id="Пол Гаскойн"><td>Пол Гаскойн</td><td>Leo_Bestio</td></tr>
+<tr id="TheDima243"><td>TheDima243</td><td>Dima243</td></tr>
+<tr id="TakoePolo"><td>TakoePolo</td><td>PolotenceVelikolepnoe</td></tr>
+<tr id="rikardo"><td>rikardo</td><td>rikardo163</td></tr>
+<tr id="crocok"><td>crocok</td><td>Grigory_Skovoroda</td></tr>
+<tr id="ВянтарьОдет"><td>ВянтарьОдет</td><td>Kazakh_3000</td></tr>
+<tr id="Igor"><td>Igor</td><td>gay sex villa 3d</td></tr></tbody></table>
 </body></html>
