--- a/unmodlist.htm
+++ b/unmodlist.htm
@@ -69,7 +69,7 @@ function cplottopickwinner() {
 <br>
 <b> Кандидаты на выход: </b>	
 	
-<table id="latestData" style="width:calc(100% - 450px)"><tbody>
+<table id="latestData" style="width:calc(450px)"><tbody>
 <tr><td>keydzhi</td></tr>
 <tr><td>13slink13</td></tr>
 <tr><td>1_peter</td></tr>
